fix: images on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -143,7 +143,8 @@ button {
 .buttons-wrapper {
     position: fixed;
     bottom: 0;
+    margin-bottom: 20px;
 }
-.buttons-wrapper:button {
-    margin-bottom: 50px;
+.image-wrap img {
+    width: 100%;
 }
